<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DevTools</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_by_app_name">Sort by app name</string>
    <string name="action_sort_by_pkg_name">Sort by package name</string>
    <string name="action_sort_by_uid">Sort by uid</string>
    <string name="action_sort_by_install_time">Sort by install time</string>
    <string name="action_sort_by_update_time">Sort by update time</string>
    <string name="action_sort_by_target_sdk">Sort by targetSdk</string>
    <string name="action_sort_by_min_sdk">Sort by minSdk</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>

    <string name="title_permission_request">Permission Request</string>

    <string name="tip_no_sdcard">No SD card available</string>

    <string name="module_device_info_title">Device Info</string>
    <string name="module_device_info_desc">Explore the device details</string>
    <string name="module_system_utilities_title">System Utilities</string>
    <string name="module_system_utilities_desc">Explore the system utilities</string>
    <string name="module_installed_apps_title">Apps List</string>
    <string name="module_installed_apps_desc">Explore the installed apps info</string>
    <string name="module_broadcast_tester_title">Broadcast Tester</string>
    <string name="module_broadcast_tester_desc">Test system broadcasts</string>

    <string name="module_apps_ops_title">Apps Ops</string>
    <string name="module_apps_ops_desc">Supported by Android 4.3+, hidden in Settings</string>
    <string name="module_apps_mgr_title">Apps Manager</string>
    <string name="module_apps_mgr_desc">Bring up Apps Manager in Settings</string>
    <string name="module_testing_settings_title">Testing Settings</string>
    <string name="module_testing_settings_desc">Bring up Testing in Settings</string>
    <string name="module_bluetooth_viewer_title">Bluetooth Viewer</string>
    <string name="module_bluetooth_viewer_desc">Enable/disable bluetooth and view bluetooth events</string>

    <string name="elapsed_time_hours">"%1$dh%2$dm"</string>
    <string name="elapsed_time_minutes">"%1$dm%2$ds"</string>
    <string name="elapsed_time_seconds">"%1$ds"</string>

    <string name="apps_app_state">Disabled: %1$s, uninstalled: %2$s</string>
    <string name="apps_app_target_min_sdk">targetSdk: %1$d, minSdk: %2$d</string>

    <string name="apps_selector_title">Apps Selector</string>
    <string name="apps_selector_status_no_apps_selected">No apps are selected</string>
    <string name="apps_selector_status_one_app_selected">\"%1$s\" is selected</string>
    <plurals name="apps_selector_status_multiple_apps_selected">
        <item quantity="one">One app is selected</item>
        <item quantity="other">%1$d apps are selected</item>
    </plurals>
    <string name="apps_selector_btn_select">Select</string>

    <string name="apps_sampler_module_title">Apps Sampler</string>
    <string name="apps_sampler_module_desc">Sample apps CPU, memory and traffic usage</string>
    <string name="apps_sampler_start_sampling">Start</string>
    <string name="apps_sampler_start_sampling_toast">It\'s sampling now</string>
    <string name="apps_sampler_stop_sampling">Stop</string>
    <string name="apps_sampler_stop_sampling_toast">Sampling was stopped</string>
    <string name="apps_sampler_clear_logs">Clear</string>
    <string name="apps_sampler_clear_logs_toast">The logs were cleared</string>
    <string name="apps_sampler_create_report">Report</string>
    <string name="apps_sampler_create_report_toast">To create sample report</string>
    <string name="apps_sampler_sample_interval">"Sample interval (seconds): "</string>
    <string name="apps_sampler_sample_interval_input_toast">Please input valid sample interval!</string>
    <string name="apps_sampler_sample_period">"Sample period (minutes): "</string>
    <string name="apps_sampler_apps_list_header">The apps selected to sample:</string>
    <string name="apps_sampler_apps_list_select">Select apps</string>
    <string name="apps_sampler_no_apps_toast">Please select apps which to sample!</string>
    <string name="apps_sampler_notification_ticker">Sampling the apps…</string>
    <string name="apps_sampler_sample_status">Start time: %1$s\nClock time (s): %2$d\nSample count: %3$d</string>
    <string name="apps_sampler_permissions_rationale">The sampler need to access the external storage (or SD card) to write the stats files.</string>
    <string name="apps_sampler_notification_channel">Sampler ongoing notification</string>

    <string name="running_apps_module_title">Running Apps</string>
    <string name="running_apps_module_desc">Show all the running apps</string>

    <string name="security_scanner_module_title">Security Scanner</string>
    <string name="security_scanner_module_desc">Scan security issues of apps</string>
    <string name="security_scanner_unmarshall_module_title">Intent Unmarshall</string>
    <string name="security_scanner_unmarshall_module_desc">Scan the \"intent unmarshall\" issue</string>
    <string name="security_scanner_unmarshall_scan_all">Test all components</string>
    <string name="security_scanner_unmarshall_stop_scan">Stop scanning</string>
    <string name="security_scanner_unmarshall_app_selected_state">The app selected to scan:\n%1$s</string>
    <string name="security_scanner_unmarshall_select_app">Select app</string>
    <string name="security_scanner_unmarshall_option_receiver">Scan Receivers</string>
    <string name="security_scanner_unmarshall_option_service">Scan Services</string>
    <string name="security_scanner_unmarshall_option_activity">Scan Activities</string>
    <string name="security_scanner_unmarshall_option_needkill">Need Kill</string>

    <string name="contacts_module_title">Contacts Creator</string>
    <string name="contacts_module_desc">Create or delete contacts for test purpose</string>
    <string name="contacts_count_state" tools:ignore="PluralsCandidate">%1$d contacts found\n%2$d deleted contacts to sync</string>
    <string name="contacts_query">Query Contacts</string>
    <string name="contacts_dump">Dump Contacts</string>
    <string name="contacts_count_tip">"Number of Contacts:"</string>
    <string name="contacts_create">Create Contacts</string>
    <string name="contacts_delete">Delete Contacts</string>
    <string name="contacts_msg_querying">Querying contacts…</string>
    <string name="contacts_msg_creating">Creating contacts…</string>
    <string name="contacts_msg_deleting">Deleting contacts…</string>
    <string name="contacts_msg_permission_denied">No permissions to visit contacts!</string>
    <string name="contacts_permissions_rationale">Contacts Creator need to read and write contacts for its features.</string>

</resources>
