<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_app_name"
                    android:title="@string/action_sort_by_app_name"
                    android:checked="true" />
                <item
                    android:id="@+id/action_sort_by_pkg_name"
                    android:title="@string/action_sort_by_pkg_name" />
                <item
                    android:id="@+id/action_sort_by_uid"
                    android:title="@string/action_sort_by_uid" />
                <item
                    android:id="@+id/action_sort_by_install_time"
                    android:title="@string/action_sort_by_install_time" />
                <item
                    android:id="@+id/action_sort_by_update_time"
                    android:title="@string/action_sort_by_update_time" />
            </group>
        </menu>
    </item>
</menu>