<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppTheme.ActivityMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.ycdev.android.devtools.security.unmarshall.UnmarshallScannerActivity">

    <View style="@style/Widget.AppTheme.HorizontalDivider" />

    <TextView
        android:id="@+id/app_selected_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_scanner_unmarshall_app_selected_state" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/app_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_scanner_unmarshall_select_app" />

    <View style="@style/Widget.AppTheme.HorizontalDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/option_receiver"
            style="@style/Widget.AppTheme.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_scanner_unmarshall_option_receiver"
            android:checked="true" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/option_service"
            style="@style/Widget.AppTheme.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_scanner_unmarshall_option_service"
            android:checked="true" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/option_activity"
            style="@style/Widget.AppTheme.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_scanner_unmarshall_option_activity"
            android:checked="true" />
    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/option_needkill"
        style="@style/Widget.AppTheme.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_scanner_unmarshall_option_needkill"
        android:checked="true" />

    <View style="@style/Widget.AppTheme.HorizontalDivider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/test_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/security_scanner_unmarshall_scan_all" />

</LinearLayout>
