<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppTheme.ActivityMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_msg_querying"
            tools:text="5 contacts found" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_query" />
            <Button
                android:id="@+id/dump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_dump" />
        </LinearLayout>

        <View style="@style/Widget.AppTheme.HorizontalDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_count_tip" />

            <EditText
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="100dp"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_create" />

        <View style="@style/Widget.AppTheme.HorizontalDivider" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_delete" />
    </LinearLayout>
</ScrollView>
