<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.AppTheme.ActivityMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/apps_sampler_start_sampling" />
        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/apps_sampler_stop_sampling" />
        <Button
            android:id="@+id/create_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/apps_sampler_create_report" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_sampler_sample_interval" />
        <EditText
            android:id="@+id/interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:singleLine="true"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_sampler_sample_period" />
        <EditText
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:singleLine="true"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/sample_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/Widget.AppTheme.HorizontalDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apps_sampler_apps_list_header" />
    <ListView
        android:id="@+id/list"
        style="@style/Widget.AppTheme.ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/apps_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/apps_sampler_apps_list_select" />

    <View style="@style/Widget.AppTheme.HorizontalDivider" />

</LinearLayout>
